<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/rounded_10dp"
    android:layout_marginHorizontal="8dp"
    android:layout_marginBottom="8dp"
    android:padding="8dp">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/rounded_10dp"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/restaurant_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/ivImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="3dp"
        android:text="@string/location"
        android:gravity="center_vertical"
        app:layout_constraintStart_toEndOf="@id/ivImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:drawableStartCompat="@drawable/ic_location"
        app:drawableTint="#8e8e8e" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="3dp"
        android:text="@string/rating"
        app:layout_constraintStart_toEndOf="@id/ivImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLocation"
        app:drawableStartCompat="@drawable/ic_rating" />

</androidx.constraintlayout.widget.ConstraintLayout>